Update and rename Home Page.html to index.html

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
       <h1 id="heading">Are you ready to roll the dice <i class="fas fa-dice"></i>?</h1>
       
       <div>
-      <form action="index.html" method="GET">
+      <form action="main.html" method="GET">
         <input type="text" name="playerOne" placeholder="Player 1" class="ip" id="one" required autofocus/>
         <br>
         <input type="text" name="playerTwo" placeholder="Player 2" class="ip" id="two" required/>
         <br>
-        <a href="index.html"><input type="submit" class="btn" value="Let's Roll"></button></a>
+        <a href="main.html"><input type="submit" class="btn" value="Let's Roll"></button></a>
         
       </form>
     </div>
